# 4_en_linea

./: .gitignore  CMakeLists.txt  main.cpp  recursos.rc
datos/: LogicaFicheros.cpp  LogicaFicheros.h
negocios/: Cpu.cpp  Cpu.h  Jugador.cpp  Jugador.h  LogicaFicha.cpp  LogicaFicha.h  LogicaTablero.cpp  LogicaTablero.h
presentacion/: Boton.cpp  Boton.h  Interfaz.cpp  Interfaz.h
